--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -97,6 +97,14 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_description_crongressman" >
             
+           <ImageView
+                android:id="@+id/bkg_quota_technical_work_and_consulting"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/background_technical_work_and_consulting" />
+            
             <ImageView
                 android:id="@+id/btn_quota_technical_work_and_consulting"
                 android:layout_width="100dp"
@@ -114,7 +122,7 @@
 		        android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
 		        android:layout_alignRight="@id/btn_quota_technical_work_and_consulting"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_technical_work_and_consulting" />
             
             <TextView
                 android:id="@+id/txt_quota_technical_work_and_consulting"
@@ -125,6 +133,15 @@
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_technical_work_and_consulting" />
             
+            <ImageView
+                android:id="@+id/bkg_quota_telephony"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/btn_quota_technical_work_and_consulting"
+                android:background="@drawable/background_telephony" />
+
             <ImageView
                 android:id="@+id/btn_quota_telephony"
                 android:layout_width="100dp"
@@ -143,7 +160,7 @@
 		        android:layout_alignLeft="@id/btn_quota_telephony"
 		        android:layout_alignRight="@id/btn_quota_telephony"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_telephony" />
             
             <TextView 
                 android:id="@+id/txt_quota_telephony"
@@ -153,6 +170,15 @@
                 android:layout_alignLeft="@id/btn_quota_telephony"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_telephony" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_postal_services"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_below="@id/btn_quota_technical_work_and_consulting"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:background="@drawable/background_postal_services" />
             
             <ImageView
                android:id="@+id/btn_quota_postal_services"
@@ -172,7 +198,7 @@
 		        android:layout_alignLeft="@id/btn_quota_postal_services"
 		        android:layout_alignRight="@id/btn_quota_postal_services"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_postal_services" />
             
             <TextView
                 android:id="@+id/txt_quota_postal_services"
@@ -182,6 +208,15 @@
                 android:layout_alignLeft="@id/btn_quota_postal_services"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_postal_sevices" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_issuance_of_air_tickets" 
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_telephony"
+               android:background="@drawable/background_issuance_of_air_tickets" />
             
             <ImageView
                android:id="@+id/btn_quota_issuance_of_air_tickets" 
@@ -201,7 +236,7 @@
 		        android:layout_alignLeft="@id/btn_quota_issuance_of_air_tickets"
 		        android:layout_alignRight="@id/btn_quota_issuance_of_air_tickets"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_issuance_of_air_tickets" />
             
             <TextView
                 android:id="@+id/txt_quota_issuance_of_air_tickets"
@@ -211,6 +246,15 @@
                 android:layout_alignLeft="@id/btn_quota_issuance_of_air_tickets"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_issuance_of_air_tickets" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_safety"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_postal_services"
+               android:background="@drawable/background_safety" />
             
             <ImageView
                android:id="@+id/btn_quota_safety"
@@ -230,7 +274,7 @@
 		        android:layout_alignLeft="@id/btn_quota_safety"
 		        android:layout_alignRight="@id/btn_quota_safety"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_safety" />
             
             <TextView
                 android:id="@+id/txt_quota_safety"
@@ -240,6 +284,15 @@
                 android:layout_alignLeft="@id/btn_quota_safety"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_safety" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_alimentation" 
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_issuance_of_air_tickets"
+               android:background="@drawable/background_alimentation" />
             
             <ImageView
                android:id="@+id/btn_quota_alimentation" 
@@ -259,7 +312,7 @@
 		        android:layout_alignLeft="@id/btn_quota_alimentation"
 		        android:layout_alignRight="@id/btn_quota_alimentation"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_alimentation" />
             
             <TextView
                 android:id="@+id/txt_quota_alimentation"
@@ -269,6 +322,15 @@
                 android:layout_alignLeft="@id/btn_quota_alimentation"
                 android:layout_marginLeft="33dp"
 			    android:text="@string/value_quota_alimentation" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_fuel"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_safety"
+               android:background="@drawable/background_fuel" />
             
             <ImageView
                android:id="@+id/btn_quota_fuel"
@@ -288,7 +350,7 @@
 		        android:layout_alignLeft="@id/btn_quota_fuel"
 		        android:layout_alignRight="@id/btn_quota_fuel"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_fuel" />
             
             <TextView
                 android:id="@+id/txt_quota_fuel"
@@ -298,6 +360,15 @@
                 android:layout_alignLeft="@id/btn_quota_fuel"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_fuel" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_air_freight"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_alimentation"
+               android:background="@drawable/background_air_freight" />
             
             <ImageView
                android:id="@+id/btn_quota_air_freight"
@@ -317,7 +388,7 @@
 		        android:layout_alignLeft="@id/btn_quota_air_freight"
 		        android:layout_alignRight="@id/btn_quota_air_freight"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_air_freight" />
             
             <TextView
                 android:id="@+id/txt_quota_air_freight"
@@ -327,6 +398,15 @@
                 android:layout_alignLeft="@id/btn_quota_air_freight"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_air_freight" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_office"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_fuel"
+               android:background="@drawable/background_office" />
             
             <ImageView
                android:id="@+id/btn_quota_office"
@@ -346,7 +426,7 @@
 		        android:layout_alignLeft="@id/btn_quota_office"
 		        android:layout_alignRight="@id/btn_quota_office"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_office" />
             
             <TextView
                 android:id="@+id/txt_quota_office"
@@ -356,6 +436,15 @@
                 android:layout_alignLeft="@id/btn_quota_office"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_office" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_accommodation"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_telephony"
+               android:layout_below="@id/btn_quota_air_freight"
+               android:background="@drawable/background_accommodation" />
 
             <ImageView
                android:id="@+id/btn_quota_accommodation"
@@ -375,7 +464,7 @@
 		        android:layout_alignLeft="@id/btn_quota_accommodation"
 		        android:layout_alignRight="@id/btn_quota_accommodation"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_accommodation" />
             
             <TextView
                 android:id="@+id/txt_quota_accommodation"
@@ -385,6 +474,15 @@
                 android:layout_alignLeft="@id/btn_quota_accommodation"
                 android:layout_marginLeft="33dp"
                 android:text="@string/value_quota_accommodation" />
+            
+            <ImageView
+               android:id="@+id/bkg_quota_disclosure_parliamentary_activity"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="15dp"
+               android:layout_alignLeft="@id/btn_quota_technical_work_and_consulting"
+               android:layout_below="@id/btn_quota_office"
+               android:background="@drawable/background_disclosure_parliamentary_activity" />
 
             <ImageView
                android:id="@+id/btn_quota_disclosure_parliamentary_activity"
@@ -404,7 +502,7 @@
 		        android:layout_alignLeft="@id/btn_quota_disclosure_parliamentary_activity"
 		        android:layout_alignRight="@id/btn_quota_disclosure_parliamentary_activity"            
 		        android:scaleType="fitXY"
-		        android:background="@drawable/level" />
+		        android:background="@drawable/level_disclosure_parliamentary_activity" />
             
             <TextView
                 android:id="@+id/txt_quota_disclosure_parliamentary_activity"
